--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -9,7 +9,7 @@
 </section>
 
 <section class="home-clients">
-  <div class="container d-flex">
+  <div class="container d-flex justify-content-between align-items-center">
     <img class="client-logo" src="images/bizlybw.svg" alt="Bizly" />
     <img class="client-logo" src="images/sloohbw.svg" alt="Slooh" />
     <img class="client-logo" src="images/giffybw.svg" alt="GiftFly" />
