--- a/app/templates/work.hbs
+++ b/app/templates/work.hbs
@@ -1,89 +1,60 @@
 <section class="home-clients work-clients">
-  <h2 class="text-md-center">Our Clients</h2>
-  <div class="container d-flex">
-    <img class="client-logo" src="images/bizlybw.svg" alt="Bizly" />
-    <img class="client-logo" src="images/sloohbw.svg" alt="Slooh" />
-    <img class="client-logo" src="images/giffybw.svg" alt="GiftFly" />
-    <img class="client-logo" src="images/classmatebw.svg" alt="classmate" />
-    <img class="client-logo" src="images/minellibw.svg" alt="minelli" />
+  <h2 class="text-md-center">Our clients</h2>
+  <div class="container d-flex justify-content-between align-items-center">
+    <img class="client-logo" src="images/sloohbw.png" srcset="images/sloohbw@2x.png 2x, images/sloohbw@3x.png 3x" alt="Slooh" />
+    <img class="client-logo" src="images/bizlybw.png" srcset="images/bizlybw@2x.png 2x, images/bizlybw@3x.png 3x" alt="Bizly" />
+    <img class="client-logo" src="images/giftflybw.png" srcset="images/giftflybw@2x.png 2x, images/giftflybw@3x.png 3x" alt="giftfly" />
+    <img class="client-logo" src="images/classmatebw.png" srcset="images/classmatebw@2x.png 2x, images/classmatebw@3x.png 3x" alt="classmate" />
+    <img class="client-logo" src="images/minellibw.png" srcset="images/minellibw@2x.png 2x, images/minellibw@3x.png 3x" alt="minelli" />
   </div>
 </section>
 
-<section class="home-section container home-our-process">
-  <h2 class="section-title text-md-center">Software and App Development Services</h2>
+<section class="container">
+  <div class="project-wrapper d-flex flex-column">
+    <div class="project-logo">
+      <img class="client-logo" src="images/slooh-logo.png" srcset="images/slooh-logo@2x.png 2x, images/slooh-logo@3x.png 3x" alt="Slooh" />
+    </div>
+    <div class="project-demands">Custom CMS | Reservation system | Live telescope image viewing</div>
+    <div class="project-description">Slooh allows the exploration of the universe by giving users command of highly powered telescopes throughout the world through their browser. In 2016 Slooh was looking to redesign and rebuild their entire product. In collaboration with EcmaStack and the agile workflow, we had built an entirely new reservation system, new means for exploring live telescope imagery, and a customized CMS.</div>
+  </div>
+  <div class="project-wrapper d-flex flex-column">
+    <div class="project-logo">
+      <img class="client-logo" src="images/bizly-logo.png" srcset="images/bizly-logo@2x.png 2x, images/bizly-logo@3x.png 3x" alt="Bizly" />
+    </div>
+    <div class="project-demands">Custom CMS | Reservation system | Live message system | Developer mentorship</div>
+    <div class="project-description">Bizly is a startup based out of Manhattan looking working on a series of products that aid in the reservation and monitization of meeting rooms in hotels. EcmaStack collaborated to aid the Bizly team in solving some initial technical challenges they had been having with their website and server side rendering with modern Javascript frameworks and tools. After a successful release of the Bizly website and providing the tools, training and strategy needed to continue being successful, EcmaStack was then called on to build Bizly’s custom inventory management tool for both internal and external use. EcmaStack’s workflow allowed for the delivery of majority of the required functionality within six weeks.</div>
+  </div>
+  <div class="project-wrapper d-flex flex-column">
+    <div class="project-logo">
+      <img class="client-logo" src="images/classmate-logo.png" srcset="images/classmate-logo@2x.png 2x, images/classmate-logo@3x.png 3x" alt="classmate" />
+    </div>
+    <div class="project-demands">Design and UX | Custom CMS | Real time messaging | Various types of account management</div>
+    <div class="project-description">In 2015 ClassMate was decided to be invested to be built to aid in providing a modern platform for any educator to use in order to make their content accessible on the web. ClassMate is unique in the sense that it is designed to have a flat user account structure, meaning that at anytime their users may be Educators or Learners. In 12 months EcmaStack worked to design the brand, user interface and full stack engineering it took to make ClassMate available to the public.</div>
+  </div>
+</section>
 
-  <article class="process-block right-bubble row">
-    <div class="col-md-7">
-      <h3 class="block-title">Software Engineering</h3>
-      <p class="block-description">
-        We work with the best and most creative engineers available in the market.  We build software through the encouragement of excellent developer culture.
-      </p>
+<section class="container">
+  <div class="review">
+    <div class="review-body d-flex flex-column">
+      These guys are just the coolest! It is a good thing we hired them. EcmaStack’s workflow and professionalism helped us achieve our goals.
+      <div class="review-author align-self-end">John Doe, CTO, Some Client</div>
     </div>
-    <div class="col-md-5 hidden-xs-down">
-      <img src="/images/collaborative-icon.svg" alt="Collaborative Planning" />
-    </div>
-  </article>
+  </div>
+</section>
 
-  <article class="process-block left-bubble row">
-    <div class="col-md-5 hidden-xs-down">
-      <img src="/images/management-icon.svg" alt="Collaborative Planning" />
-    </div>
-    <div class="col-md-7">
-      <h3 class="block-title">Front End Development</h3>
-      <p class="block-description">
-        The uniqueness of our business is how we build fast and beautiful interfaces for people to use.  The front end is the face of your business, it should be done well.
-      </p>
-    </div>
-  </article>
+<section class="short-description">
+  <div class="container text-center">
+    <h2>A modern team providing modern solutions to modern businesses</h2>
 
-  <article class="process-block right-bubble row">
-    <div class="col-md-7">
-      <h3 class="block-title">API Development</h3>
-      <p class="block-description">
-        Our API’s and services focus on gathering data and presenting it for a host of clients to use their application tier.  We leverage technologies like Node.js and GraphQL to achieve excellent orchestration between client and server.
-      </p>
+    <div class="row">
+      <div class="col-md-4 desc-item">Build an MVP | MVI</div>
+      <div class="col-md-4 desc-item">Develop your application</div>
+      <div class="col-md-4 desc-item">Professional training</div>
+      <div class="col-md-4 desc-item">Professional consultations</div>
+      <div class="col-md-4 desc-item">Stack migrations</div>
+      <div class="col-md-4 desc-item">Embedded teammates</div>
     </div>
-    <div class="col-md-5 hidden-xs-down">
-      <img src="/images/quality-icon.svg" alt="Collaborative Planning" />
-    </div>
-  </article>
-
-  <article class="process-block left-bubble row">
-    <div class="col-md-5 hidden-xs-down">
-      <img src="/images/management-icon.svg" alt="Collaborative Planning" />
-    </div>
-    <div class="col-md-7">
-      <h3 class="block-title">Training</h3>
-      <p class="block-description">
-        Fast track your development team into modern technologies like React / Redux and Node.js through one of our training programs.  Contact us to learn more about what we have available.
-      </p>
-    </div>
-  </article>
-
-  <article class="process-block right-bubble row">
-    <div class="col-md-7">
-      <h3 class="block-title">User Experience Engineering</h3>
-      <p class="block-description">
-        Work with our professional network of user experience engineers.  Our team is top notch in understanding the users needs in human computer interaction.  We focus on making your software super easy to use.
-      </p>
-    </div>
-    <div class="col-md-5 hidden-xs-down">
-      <img src="/images/quality-icon.svg" alt="Collaborative Planning" />
-    </div>
-  </article>
-
-  <article class="process-block left-bubble row">
-    <div class="col-md-5 hidden-xs-down">
-      <img src="/images/management-icon.svg" alt="Collaborative Planning" />
-    </div>
-    <div class="col-md-7">
-      <h3 class="block-title">Brand Development</h3>
-      <p class="block-description">
-        We are experts in brand development.  Logo, color scheme, brand style guides are all a part of how we create a rich and meaningful brand.
-      </p>
-    </div>
-  </article>
-
+  </div>
 </section>
 {{yield}}
 
